Update 'o8yrn089y-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:3296fa84b01867163d89eecdbf57cb242b4a5d5f@sha256:d3b3e4ee63311dc9d7bd2995964dccb6610cad32860e37448ca8c30bcbf9a173

--- a/components/o8yrn089y-go/overlays/development/deployment-patch.yaml
+++ b/components/o8yrn089y-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: o8yrn089y-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:3296fa84b01867163d89eecdbf57cb242b4a5d5f@sha256:d3b3e4ee63311dc9d7bd2995964dccb6610cad32860e37448ca8c30bcbf9a173
+          name: container-image
